# podcast-player

./: .gitignore  .package.resolved  AGENTS.md  CLAUDE.md  Cargo.toml  Project.swift  README.md  WIP.md  index.html  justfile  nostrmultiplatform  styles.css  test-scenarios.json
App/core/: Cargo.toml
App/core/scripts/: generate-swift-bindings.sh
App/core/src/: blossom.rs  client.rs  comments.rs  errors.rs  events.rs  lib.rs  models.rs  nip19.rs  nip46.rs  nip46_uri.rs  nostr_runtime.rs  peer_agent.rs  podcast_discovery.rs  podcast_publisher.rs  profile.rs  relays.rs  session.rs  subscriptions.rs  threads.rs
apps/nmp-app-podcast/: Cargo.toml  action-builders.json  read-projections.json
apps/nmp-app-podcast/docs/design/: podcast-app-state-refactor.md
apps/nmp-app-podcast/schema/: podcast_json_action.fbs  podcast_json_projection.fbs
apps/nmp-app-podcast/src/: action_payload.rs  ad_skip_handler.rs  ad_skip_handler_tests.rs  agent_handler.rs  agent_handler_tests.rs  agent_llm.rs  agent_note_handler.rs  agent_note_handler_tests.rs  agent_note_responder.rs  agent_note_responder_tests.rs  agent_tools.rs  agent_tools_tests.rs  ai_chapters.rs  ai_chapters_impl.rs  ai_chapters_llm.rs  ai_chapters_llm_compile.rs  ai_chapters_llm_tests.rs  ai_chapters_tests.rs  android.rs  blossom.rs  blossom_tests.rs  briefing_llm.rs  briefings_handler.rs  briefings_handler_tests.rs  categorization.rs  categorization_llm.rs  categorization_llm_tests.rs  categorization_tests.rs  chapter.rs  clip_boundaries.rs  clip_handler.rs  clip_handler_tests.rs  clip_handler_transcript_tests.rs  comments_anchor.rs  comments_handler.rs  comments_handler_tests.rs  discover_nostr.rs  discover_nostr_tests.rs  dispatch_bytes.rs  episode_merge.rs  (+72 more)
apps/nmp-app-podcast/src/android/: bridge.rs  capability_router.rs  external_signer.rs  identity.rs  mod.rs  provider_transport.rs  reports.rs  snapshot.rs
apps/nmp-app-podcast/src/capability/: audio.rs  audio_tests.rs  dispatch.rs  dispatch_tests.rs  download.rs  http.rs  http_tests.rs  mod.rs  network.rs  nostr_relay.rs  notification.rs  notification_tests.rs  voice.rs  voice_tests.rs
apps/nmp-app-podcast/src/download/: delete.rs  item.rs  item_tests.rs  mod.rs  report.rs
apps/nmp-app-podcast/src/ffi/: actions.rs  agent_action_tool.rs  agent_ask.rs  agent_category_list.rs  agent_chat_title.rs  agent_context.rs  agent_context_tests.rs  agent_conversation_history.rs  agent_directory_search.rs  agent_empty_state.rs  agent_episode_list.rs  agent_inventory.rs  agent_inventory_list.rs  agent_nostr_peer_prompt.rs  agent_owned_podcast_tool.rs  agent_search_tool.rs  agent_system_prompt.rs  agent_tts_plan.rs  agent_tts_tool.rs  agent_voice_list.rs  agent_youtube_search.rs  assemblyai_transcript.rs  audio_report.rs  audio_report_delete_tests.rs  audio_report_tests.rs  byok_auth.rs  carplay_projection.rs  chat_complete.rs  data_dir.rs  data_dir_tests.rs  dispatch_action.rs  download_report.rs  elevenlabs_scribe.rs  elevenlabs_tts.rs  elevenlabs_voice_catalog.rs  episode_events.rs  episode_mutation_tool_result.rs  external_play_plan.rs  feed_url_normalizer.rs  guard.rs  (+92 more)
apps/nmp-app-podcast/src/host_op_handler/: capabilities.rs  dispatch.rs  player_actions.rs  player_actions_tests.rs  podcast_action_dispatch.rs  podcast_actions.rs  podcast_actions_downloads.rs  podcast_actions_downloads_tests.rs  podcast_actions_feed.rs  podcast_actions_refresh.rs  podcast_actions_refresh_tests.rs  router.rs  router_tests.rs  settings_actions.rs  siri_actions.rs  social_actions.rs  speed_persist_tests.rs  task_actions.rs
apps/nmp-app-podcast/src/llm/: assemblyai_transcript.rs  backend.rs  byok_auth.rs  byok_auth_tests.rs  complete_for_role.rs  elevenlabs_key_validation.rs  elevenlabs_scribe.rs  elevenlabs_tts.rs  elevenlabs_voice_catalog.rs  factory.rs  image_generation.rs  image_generation_tests.rs  local_model_backend.rs  local_model_catalog.rs  mod.rs  model_catalog.rs  model_catalog_dtos.rs  ollama_backend.rs  openrouter_backend.rs  openrouter_key_validation.rs  openrouter_whisper.rs  openrouter_whisper_audio.rs  perplexity_search.rs  perplexity_search_tests.rs  provider_cassette.rs  provider_config.rs  provider_replay.rs  provider_transport.rs  provider_transport_mock.rs  provider_transport_tests.rs  rerank_backend.rs
apps/nmp-app-podcast/tests/: snapshot_rebuild_perf.rs
apps/podcast-agent-core/: Cargo.toml
apps/podcast-agent-core/src/: lib.rs
apps/podcast-briefings/: Cargo.toml
apps/podcast-briefings/src/: actions.rs  actions_tests.rs  lib.rs  scheduler.rs  types.rs
apps/podcast-core/: Cargo.toml
apps/podcast-core/src/: lib.rs  text.rs
apps/podcast-core/tests/: migration_from_state_json.rs
apps/podcast-discovery/: Cargo.toml
apps/podcast-discovery/src/: actions.rs  actions_tests.rs  kinds.rs  kinds_tests.rs  lib.rs  nip_f4.rs  nip_f4_tests.rs  types.rs  types_tests.rs
apps/podcast-feeds/: Cargo.toml
apps/podcast-feeds/src/: client.rs  http.rs  http_tests.rs  lib.rs
apps/podcast-feeds/tests/: feed_client.rs  opml_roundtrip.rs  rss_parser.rs
apps/podcast-knowledge/: Cargo.toml
apps/podcast-knowledge/src/: actions.rs  actions_tests.rs  bm25.rs  bm25_tests.rs  lib.rs  search.rs  search_tests.rs  sqlite.rs  sqlite_tests.rs  store.rs  store_tests.rs  types.rs  types_tests.rs
apps/podcast-transcripts/: Cargo.toml
apps/podcast-transcripts/src/: actions.rs  actions_tests.rs  chunk.rs  chunk_tests.rs  lib.rs  types.rs  types_tests.rs
apps/podcast-tui/: Cargo.toml
apps/podcast-tui/src/: agent_state.rs  app.rs  audio_host.rs  bridge.rs  download_state.rs  input.rs  input_agent_tasks.rs  input_downloads.rs  input_provider_catalog.rs  input_settings.rs  input_tabs.rs  lib.rs  local_model_catalog.rs  main.rs  navigation.rs  provider_model_catalog.rs  provider_setting_model_selection.rs  provider_settings_catalog.rs  provider_settings_parser.rs  provider_voice_catalog.rs  rows.rs  runtime.rs  runtime_actions.rs  runtime_actions_nostr.rs  runtime_settings_actions.rs  runtime_tests.rs  settings_catalog.rs  settings_state.rs  update.rs
apps/podcast-tui/src/ui/: help.rs  (+20 more)
(+3522 files in other folders)
