[workspace]
members = [
    "apps/nmp-app-podcast",
    "apps/podcast-agent-core",
    "apps/podcast-core",
    "apps/podcast-discovery",
    "apps/podcast-feeds",
    "apps/podcast-knowledge",
    "apps/podcast-transcripts",
    "apps/podcast-tui",
]
resolver = "2"

# NMP pin discipline: all NMP crates below track the SAME
# nostr-multi-platform branch so the whole graph resolves exactly one copy of
# each NMP crate (one `NmpApp` type, no duplicate-version fan-out).
#
# This app tracks NMP `branch = "master"`, NEVER a pinned rev. Owner
# directive: if master breaks something here, fix podcast-player against
# master — do not re-pin to an old rev to dodge API drift. `cargo update`
# resolves nmp-* to whatever master currently HEADs at; run it after any
# NMP-side API change and fix drift in this repo.
#
# `nmp-ffi`, `nmp-signer-broker`, and `nmp-defaults` are DELETED upstream
# (the whole native FFI surface moved to UniFFI: `nmp-native-runtime` +
# `nmp-uniffi` + `nmp-substrate`). They are intentionally absent here — A1
# (#681) added the UniFFI-facade replacements and rewired
# `apps/nmp-app-podcast` onto them, following the validated apps/nmp-app-29er
# precedent (nmp-app-gallery and nmp-app-29er both build their OWN facade
# object directly on nmp-native-runtime + nmp-uniffi-support + nmp-substrate +
# the third-party `uniffi` crate; neither depends on the generic `nmp-uniffi`
# base-object crate).
#
# `nmp-feedback` is also intentionally absent: it still depends on `nmp-ffi`
# (deleted upstream) and has no path forward without a real rewrite of its
# publish call site — the generic JSON `nmp.publish` doorway it used is gone
# with no direct replacement (writes are now typed, app-owned ActionModules).
# The local vendored compat fork that used to live at
# `third-party/nmp-feedback` (a shim for the *previous* v0.8.0 gap) is
# deleted rather than extended past this new deletion boundary. Tracked
# upstream: pablof7z/nmp-feedback#3. Feedback-thread re-integration in
# podcast-player is deferred to a follow-up slice once that lands.
[workspace.dependencies]
nmp-core = { version = "1.0.0-rc.1", git = "https://github.com/pablof7z/nostr-multi-platform.git", branch = "master" }
nmp-blossom = { version = "1.0.0-rc.1", git = "https://github.com/pablof7z/nostr-multi-platform.git", branch = "master" }
nmp-nip02 = { version = "1.0.0-rc.1", git = "https://github.com/pablof7z/nostr-multi-platform.git", branch = "master" }
nmp-nip50 = { version = "1.0.0-rc.1", git = "https://github.com/pablof7z/nostr-multi-platform.git", branch = "master" }
nmp-planner = { version = "1.0.0-rc.1", git = "https://github.com/pablof7z/nostr-multi-platform.git", branch = "master" }
nmp-native-runtime = { version = "1.0.0-rc.1", git = "https://github.com/pablof7z/nostr-multi-platform.git", branch = "master" }
nmp-uniffi-support = { version = "1.0.0-rc.1", git = "https://github.com/pablof7z/nostr-multi-platform.git", branch = "master" }
nmp-substrate = { version = "1.0.0-rc.1", git = "https://github.com/pablof7z/nostr-multi-platform.git", branch = "master" }
nmp-nip17 = { version = "1.0.0-rc.1", git = "https://github.com/pablof7z/nostr-multi-platform.git", branch = "master" }
nmp-nip18 = { version = "1.0.0-rc.1", git = "https://github.com/pablof7z/nostr-multi-platform.git", branch = "master" }
nmp-nip25 = { version = "1.0.0-rc.1", git = "https://github.com/pablof7z/nostr-multi-platform.git", branch = "master" }
nmp-nip51 = { version = "1.0.0-rc.1", git = "https://github.com/pablof7z/nostr-multi-platform.git", branch = "master" }
nmp-nip22 = { version = "1.0.0-rc.1", git = "https://github.com/pablof7z/nostr-multi-platform.git", branch = "master" }
nmp-router = { version = "1.0.0-rc.1", git = "https://github.com/pablof7z/nostr-multi-platform.git", branch = "master" }
nmp-wot = { version = "1.0.0-rc.1", git = "https://github.com/pablof7z/nostr-multi-platform.git", branch = "master" }
nmp-signer-iface = { version = "1.0.0-rc.1", git = "https://github.com/pablof7z/nostr-multi-platform.git", branch = "master" }
nmp-nostr-id = { version = "1.0.0-rc.1", git = "https://github.com/pablof7z/nostr-multi-platform.git", branch = "master" }
# Surface tokens (DeclaredActionNamespace, ProjectionRegistrationKey /
# DynamicProjectionKey) that ActionModule/typed-snapshot-projection
# registration now require in place of bare `&str` keys.
nmp-ownership = { version = "1.0.0-rc.1", git = "https://github.com/pablof7z/nostr-multi-platform.git", branch = "master" }
uniffi = "0.29"
