[package]
name = "podcastr-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "podcastr_core"
path = "src/lib.rs"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
nostr-sdk = { version = "0.44.1", features = ["nip04", "nip44", "nip49"] }
nostr = { version = "0.44", default-features = false, features = ["std", "nip46", "nip44", "nip04"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
futures = "0.3"
sha2 = "0.10"
base64 = "0.22"
parking_lot = "0.12"
tracing = "0.1"
uniffi = { version = "0.29", features = ["cli", "tokio"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[dev-dependencies]
tempfile = "3"
