[package]
name = "nmp-app-podcast"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Per-app Podcast glue. Owns the kernel composition root and surfaces the projected state over a static-lib FFI for the iOS shell."

[lib]
name = "nmp_app_podcast"
# Static lib so the iOS shell can link `-lnmp_app_podcast` alongside
# `-lnmp_core`. The crate's `#[no_mangle] extern "C"` symbols
# (`nmp_app_podcast_register`, `nmp_app_podcast_snapshot`,
# `nmp_app_podcast_snapshot_free`, `nmp_app_podcast_unregister`) land in
# their own archive (doctrine D0 forbids `nmp-core` from carrying
# podcast-domain nouns, so they cannot be re-exported through
# `libnmp_core.a`).
#
# `cdylib` is added for M2.F: cargo-ndk packs the same crate as a
# `libnmp_app_podcast.so` for Android, exposing the JNI shim in
# `src/android.rs` (gated `#[cfg(target_os = "android")]`). Same cargo
# binary, second platform.
crate-type = ["staticlib", "rlib", "cdylib"]

[features]
# Persistent local cache / publish-intent ledger for offline-first Podcast.
lmdb-backend = ["nmp-core/lmdb-backend"]
# Headless scenario test binary: real HTTP via reqwest, temp dirs via tempfile.
# tokio-tungstenite and futures-util are now non-optional (production social
# graph relay subscriptions use them). Gated deps here are only the test-only
# build utilities; the relay client is a production dependency.
# TODO(A1, pablof7z/podcast-player#681): restore the nmp-native-runtime
# test-support equivalent of "nmp-ffi/test-support" once that surface exists.
headless = ["dep:tempfile", "nmp-core/test-support"]

[[bin]]
name = "headless"
path = "src/bin/headless/main.rs"
required-features = ["headless"]

[[bin]]
name = "swift-codegen"
path = "src/bin/swift_codegen/main.rs"
# No required-features: the codegen binary uses only std, no crate deps.

[dependencies]
async-trait = "0.1"
log = "0.4"
# default-features = false drops reqwest's `default-tls` (native-tls → openssl-sys),
# which cannot cross-compile to Android. The crate already standardizes on rustls
# (see tokio-tungstenite + rig-core below); we re-add the other default features
# (charset/http2/system-proxy/macos-system-configuration) so non-TLS behavior is unchanged.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls", "charset", "http2", "system-proxy", "macos-system-configuration"] }
tempfile = { version = "3", optional = true }
# WebSocket client used by the production social-graph relay subscriptions
# (FetchContacts → kind:3 + kind:0) and by the headless relay_client.
# Non-optional so the iOS library also compiles with real relay support.
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
futures-util = { version = "0.3" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
nmp-core = { workspace = true }
# TODO(A1, pablof7z/podcast-player#681): `nmp-ffi` (the `NmpApp` C-ABI
# handle), `nmp-signer-broker` (NIP-46 relay-broker), and `nmp-defaults`
# (composition root) are deleted on the pinned NMP rev. A1 adds
# `nmp-native-runtime` / `nmp-uniffi` / `nmp-substrate` and rewires this
# crate's composition + dispatch onto them.
# TODO(follow-up, pablof7z/nmp-feedback#3): feedback-thread integration
# (`nmp-feedback`) is dropped here pending its own re-architecture upstream
# — see the workspace Cargo.toml pin-discipline comment.
# NIP-02 reactive follow-list projection + ActiveFollowSet trust-gate predicate.
# Listed explicitly so social_handler.rs can import FollowListProjection and
# ActiveFollowSet (D11 — single door).
nmp-nip02 = { workspace = true }
nmp-nip50 = { workspace = true }
# Subscription planner (direct dep for InterestId/LogicalInterest/etc.).
# nmp-core no longer re-exports the planner facade (#1608); external callers
# depend on nmp-planner directly.
nmp-planner = { workspace = true }
# BUD-02 blob upload action (`nmp.blossom.upload`). D13/D0 — Rust owns the
# full Build → Sign → Transport pipeline; Swift dispatches + reads the
# projected result. Same git rev as the other nmp-* deps (workspace pin).
nmp-blossom = { workspace = true }
# `nostr` reconstructs typed `Event` / `Keys` / `PublicKey` / `RelayUrl`
# values from C-ABI JSON. Pinned to 0.44.
nostr = { version = "0.44", default-features = false, features = ["std"] }
# Domain types + projections live in `podcast-core`; the per-app FFI crate
# consumes them when composing the snapshot. M2.A wires the dep so later
# milestones can publish actions and observe projections without churn.
podcast-core = { path = "../podcast-core" }
# Agent-chat domain (conversations, approvals, tasks, memory). M7.A wires
# the dep so the FFI snapshot can surface `agent: ConversationsSnapshot`
# alongside `now_playing` / `downloads`; the kernel-side action modules
# arrive in M7.B.
podcast-agent-core = { path = "../podcast-agent-core" }
# M5 — re-exports the canonical `HttpRequest` / `HttpResult` / `HttpMethod`
# wire types so `capability::http` mirrors the `capability::audio` /
# `capability::download` layout. The types themselves live in
# `podcast-feeds` (the lower-level consumer); routing them through this
# re-export keeps the per-app capability surface uniform.
podcast-feeds = { path = "../podcast-feeds" }
# Transcript parsers (VTT / SRT / Podcasting 2.0 JSON). PR 14 wires the
# dep so the `podcast.fetch_transcript` action can pull publisher transcript
# bytes via the HTTP capability, parse them with these pure-Rust parsers,
# and store the plain text on a per-episode slot in `PodcastStore`.
podcast-transcripts = { path = "../podcast-transcripts" }
# M5.3 — RAG/knowledge chunk store. `KnowledgeAction::IndexEpisode` chunks
# the Rust-stored transcript into this in-memory store and
# `KnowledgeAction::Search` does BM25-style substring matching over the
# resulting chunks (in addition to title/description). Real embedding
# search is a follow-up; this baseline needs no STT timing or vectors.
podcast-knowledge = { path = "../podcast-knowledge" }
# NIP-F4 (`kind:10154`) parser + action constants for Nostr discovery.
# Discovery + publish layer. NIP-F4 tag builders (`podcast_to_show_tags`,
# `episode_to_episode_tags`, `show_content`) and kind constants
# (`KIND_SHOW`, `KIND_EPISODE`, `KIND_AUTHOR_CLAIM`) live here. The
# `podcast.publish` host-op handler reaches for the build layer when
# constructing per-podcast NIP-F4 events (features #27/#28).
podcast-discovery = { path = "../podcast-discovery" }
rig-core = { version = "0.37", default-features = false, features = ["derive", "reqwest", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zeroize = { version = "1", features = ["derive"] }
url = { version = "2.0" }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
getrandom = "0.2"
# sha2 + base64 are used by the LLM and image-generation paths (BYOK JWT
# signing, elevenlabs audio encoding, image b64). The Blossom upload no
# longer needs them here — that pipeline now lives in nmp-blossom (D13).
sha2 = "0.10"
base64 = "0.22"

[dev-dependencies]
# Test-support gates expose `nmp_app_new` / `nmp_app_free` so FFI smoke tests
# can spin up a real `NmpApp` rather than mocking the slot.
nmp-core = { workspace = true, features = ["test-support"] }
# TODO(A1, pablof7z/podcast-player#681): restore an `nmp-native-runtime`
# test-support dep here once that surface exists (was `nmp-ffi`).
# Temporary directory support for PodcastKeyStore and identity store round-trip tests.
tempfile = "3"

# ── Android JNI shim ──────────────────────────────────────────────────────
#
# M2.F second-platform proof. `jni` is only linked when cargo targets
# `*-linux-android`, so iOS/macOS builds remain unaffected. cargo-ndk drives
# the cross-compile (see `android/Podcast/app/build.gradle.kts`).
[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21", default-features = false }
crossbeam-channel = "0.5"
