[package]
name = "nmp-app-podcast"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Per-app Podcast glue. Owns the kernel composition root over the UniFFI nmp-native-runtime surface, and projects state for the iOS shell."

[lib]
name = "nmp_app_podcast"
# Static lib so the iOS shell can link `-lnmp_app_podcast` alongside
# `-lnmp_core`. The crate's `#[no_mangle] extern "C"` symbols
# (`nmp_app_podcast_register`, `nmp_app_podcast_snapshot`,
# `nmp_app_podcast_snapshot_free`, `nmp_app_podcast_unregister`) land in
# their own archive (doctrine D0 forbids `nmp-core` from carrying
# podcast-domain nouns, so they cannot be re-exported through
# `libnmp_core.a`).
#
# `cdylib` is added for M2.F: cargo-ndk packs the same crate as a
# `libnmp_app_podcast.so` for Android, exposing the JNI shim in
# `src/android.rs` (gated `#[cfg(target_os = "android")]`). Same cargo
# binary, second platform.
crate-type = ["staticlib", "rlib", "cdylib"]

[features]
# Persistent local cache / publish-intent ledger for offline-first Podcast.
lmdb-backend = ["nmp-core/lmdb-backend"]
# Headless scenario test binary: real HTTP via reqwest, temp dirs via tempfile.
# tokio-tungstenite and futures-util are now non-optional (production social
# graph relay subscriptions use them). Gated deps here are only the test-only
# build utilities; the relay client is a production dependency.
headless = ["dep:tempfile", "nmp-core/test-support", "nmp-native-runtime/test-support"]

[[bin]]
name = "headless"
path = "src/bin/headless/main.rs"
required-features = ["headless"]

[[bin]]
name = "swift-codegen"
path = "src/bin/swift_codegen/main.rs"
# No required-features: the codegen binary uses only std, no crate deps.

[dependencies]
async-trait = "0.1"
log = "0.4"
# default-features = false drops reqwest's `default-tls` (native-tls → openssl-sys),
# which cannot cross-compile to Android. The crate already standardizes on rustls
# (see tokio-tungstenite + rig-core below); we re-add the other default features
# (charset/http2/system-proxy/macos-system-configuration) so non-TLS behavior is unchanged.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls", "charset", "http2", "system-proxy", "macos-system-configuration"] }
tempfile = { version = "3", optional = true }
# WebSocket client used by the production social-graph relay subscriptions
# (FetchContacts → kind:3 + kind:0) and by the headless relay_client.
# Non-optional so the iOS library also compiles with real relay support.
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
futures-util = { version = "0.3" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
nmp-core = { workspace = true }
# UniFFI native surface (replaces the deleted `nmp-ffi` C-ABI crate, ADR-0069).
# `nmp-native-runtime` owns the `NmpApp` handle (a plain Rust struct, no longer a
# `*mut NmpApp` C type) + lifecycle + `dispatch_action_bytes_typed`.
# `signer-broker` glues NIP-46 bunker/nostrconnect (replaces `nmp-signer-broker`);
# `external-signer` (ADR-0048) adds the NIP-55 Amber driver.
nmp-native-runtime = { workspace = true, features = ["signer-broker", "external-signer"] }
# Shared Rust-side UniFFI mechanics (update sink, capability callback, dispatch)
# the facade delegates to — used by the app's FFI seam (A6 builds the full facade).
nmp-uniffi-support = { workspace = true }
# Protocol-installer substrate (`nmp_substrate::install`) — replaces the deleted
# `nmp_defaults::register_defaults` composition root (ADR-0069). Full per-crate
# `register_*` composition lands in A2 (podcast-player#682).
nmp-substrate = { workspace = true }
# NIP-55 external-signer permission vocabulary (`Nip55Permission`).
nmp-signer-iface = { workspace = true }
# Surface-token hardening: `register_typed_snapshot_projection` now requires an
# `Into<ProjectionRegistrationKey>` key rather than a bare `&str`; app-owned
# `podcast.*` schema ids build a `DynamicProjectionKey` (see
# ffi/snapshot_domain_projections.rs::podcast_projection_key).
nmp-ownership = { workspace = true }
# NIP-02 reactive follow-list projection + ActiveFollowSet trust-gate predicate.
# Listed explicitly so social_handler.rs can import FollowListProjection and
# ActiveFollowSet (D11 — single door).
# Protocol composition (ADR-0069, replacing the deleted nmp_defaults::register_defaults).
# Faithfully restores the protocol set register_defaults wired for podcast:
# NIP-02 follow, NIP-25 reactions, NIP-17 DMs+DM-relay cache, NIP-57 zaps,
# NIP-51 bookmarks/mute. WoT trust bootstrap. Registered in ffi/register.rs.
nmp-nip02 = { workspace = true }
nmp-nip17 = { workspace = true }
nmp-nip25 = { workspace = true }
nmp-nip50 = { workspace = true }
nmp-nip51 = { workspace = true }
nmp-nip57 = { workspace = true }
nmp-wot = { workspace = true }
# Subscription planner (direct dep for InterestId/LogicalInterest/etc.).
# nmp-core no longer re-exports the planner facade (#1608); external callers
# depend on nmp-planner directly.
nmp-planner = { workspace = true }
# BUD-02 blob upload action (`nmp.blossom.upload`). D13/D0 — Rust owns the
# full Build → Sign → Transport pipeline; Swift dispatches + reads the
# projected result. Same git rev as the other nmp-* deps (workspace pin).
nmp-blossom = { workspace = true }
# `nostr` reconstructs typed `Event` / `Keys` / `PublicKey` / `RelayUrl`
# values from C-ABI JSON. Pinned to 0.44.
nostr = { version = "0.44", default-features = false, features = ["std"] }
# Domain types + projections live in `podcast-core`; the per-app FFI crate
# consumes them when composing the snapshot. M2.A wires the dep so later
# milestones can publish actions and observe projections without churn.
podcast-core = { path = "../podcast-core" }
# Agent-chat domain (conversations, approvals, tasks, memory). M7.A wires
# the dep so the FFI snapshot can surface `agent: ConversationsSnapshot`
# alongside `now_playing` / `downloads`; the kernel-side action modules
# arrive in M7.B.
podcast-agent-core = { path = "../podcast-agent-core" }
# M5 — re-exports the canonical `HttpRequest` / `HttpResult` / `HttpMethod`
# wire types so `capability::http` mirrors the `capability::audio` /
# `capability::download` layout. The types themselves live in
# `podcast-feeds` (the lower-level consumer); routing them through this
# re-export keeps the per-app capability surface uniform.
podcast-feeds = { path = "../podcast-feeds" }
# Transcript parsers (VTT / SRT / Podcasting 2.0 JSON). PR 14 wires the
# dep so the `podcast.fetch_transcript` action can pull publisher transcript
# bytes via the HTTP capability, parse them with these pure-Rust parsers,
# and store the plain text on a per-episode slot in `PodcastStore`.
podcast-transcripts = { path = "../podcast-transcripts" }
# M5.3 — RAG/knowledge chunk store. `KnowledgeAction::IndexEpisode` chunks
# the Rust-stored transcript into this in-memory store and
# `KnowledgeAction::Search` does BM25-style substring matching over the
# resulting chunks (in addition to title/description). Real embedding
# search is a follow-up; this baseline needs no STT timing or vectors.
podcast-knowledge = { path = "../podcast-knowledge" }
# NIP-F4 (`kind:10154`) parser + action constants for Nostr discovery.
# Discovery + publish layer. NIP-F4 tag builders (`podcast_to_show_tags`,
# `episode_to_episode_tags`, `show_content`) and kind constants
# (`KIND_SHOW`, `KIND_EPISODE`, `KIND_AUTHOR_CLAIM`) live here. The
# `podcast.publish` host-op handler reaches for the build layer when
# constructing per-podcast NIP-F4 events (features #27/#28).
podcast-discovery = { path = "../podcast-discovery" }
rig-core = { version = "0.37", default-features = false, features = ["derive", "reqwest", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zeroize = { version = "1", features = ["derive"] }
url = { version = "2.0" }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
getrandom = "0.2"
# sha2 + base64 are used by the LLM and image-generation paths (BYOK JWT
# signing, elevenlabs audio encoding, image b64). The Blossom upload no
# longer needs them here — that pipeline now lives in nmp-blossom (D13).
sha2 = "0.10"
base64 = "0.22"

[dev-dependencies]
# Test-support gates expose `nmp_app_new` / `nmp_app_free` so FFI smoke tests
# can spin up a real `NmpApp` rather than mocking the slot.
nmp-core = { workspace = true, features = ["test-support"] }
nmp-native-runtime = { workspace = true, features = ["test-support"] }
# Temporary directory support for PodcastKeyStore and identity store round-trip tests.
tempfile = "3"

# ── Android JNI shim ──────────────────────────────────────────────────────
#
# M2.F second-platform proof. `jni` is only linked when cargo targets
# `*-linux-android`, so iOS/macOS builds remain unaffected. cargo-ndk drives
# the cross-compile (see `android/Podcast/app/build.gradle.kts`).
[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21", default-features = false }
crossbeam-channel = "0.5"
